--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Build
 
 # Controls when the action will run.
 on:
-  runs-on: self-hosted
+  runs-on: [self-hosted, windows-latest]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
