--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,13 @@ name: Build
 
 # Controls when the action will run.
 on:
-  runs-on: [self-hosted, windows-latest]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   buildWindows:
-    runs-on: windows-latest
+    runs-on: [self-hosted, windows-latest, x64]
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
